<resources>
    <string name="app_name">RecuerdaMed</string>
    <string name="comenzar">Comenzar</string>
    <string name="registrate">Regístrate</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="DOB">Fecha de Nacimiento</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre_medicina">Medicina</string>
    <string name="tomar_cada">Ej. Tomar cada 8 horas</string>
    <string name="horario">8:00 - 16:00 - 00:00</string>
    <string name="agregar_medicamento">Agregar Medicamento</string>
    <string name="dosis">Dosis</string>
    <string name="hora_inicio">Hora Inicio</string>
    <string name="comentarios">Comentarios</string>
    <string name="guardar_medicamento">Guardar Medicamento</string>
    <string name="especialidad">Especialidad</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="numero">Número</string>
    <string name="correo">Correo</string>
    <string name="title_activity_medicamento_pendiente">Medicamento Pendiente</string>
    <string name="tomada">Tomada</string>
    <string name="no_tomada">No Tomada</string>
    <string name="horario_dosis">8:00</string>
    <string name="lunes">Lunes</string>
    <string name="ciudad">Ciudad</string>
    <string name="user">Usuario</string>
    <string name="guardar_usuario">Guardar</string>
    <string name="agregar_medico">Agregar Médico</string>
    <string name="registrar_medico">Agrega a tu médico</string>
    <string name="actualizar">Guardar</string>
    <string name="delete">Borrar</string>
    <string name="registro">Registro</string>
    <string name="agregar_medicina">Agregar Medicamento</string>
    <string name="registro_medico">Registrar médico</string>
    <string name="medicos">Información de médico</string>
    <string name="calendario">Calendario (5 días)</string>
    <string name="pendiente">Hoy</string>
    <string name="lista_medico">Médicos</string>
    <string name="usuario">Usuario</string>
    <string name="historial">Historial</string>


    <string name="action_user">Datos de Usuario</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
