<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itesm.mx.proyecto_moviles.RegistrarMedico">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/registrate"
            android:id="@+id/registrate"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="250px"
            android:layout_height="250px"
            android:id="@+id/profile"
            android:layout_below="@+id/registrate"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profile"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_nombre"
            android:layout_below="@+id/profile"
            android:layout_centerHorizontal="true"
            android:hint="@string/nombre"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_especialidad"
            android:layout_below="@+id/edit_nombre"
            android:layout_centerHorizontal="true"
            android:hint="@string/especialidad"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_direccion"
            android:layout_below="@+id/edit_especialidad"
            android:layout_centerHorizontal="true"
            android:hint="@string/direccion"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_codigo_postal"
            android:layout_below="@+id/edit_direccion"
            android:layout_alignParentStart="true"
            android:hint="@string/codigo_postal"
            android:layout_toStartOf="@+id/registrate" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_numero"
            android:layout_below="@+id/edit_direccion"
            android:layout_alignStart="@+id/registrate"
            android:hint="@string/numero"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/edit_telefono"
            android:layout_below="@+id/edit_codigo_postal"
            android:layout_alignParentStart="true"
            android:hint="@string/telefono"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edit_correo"
            android:layout_below="@+id/edit_telefono"
            android:layout_alignParentStart="true"
            android:hint="@string/correo"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:id="@+id/boton_registrar_medico"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>
</android.support.v4.widget.DrawerLayout>