<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itesm.mx.proyecto_moviles.RegistrateActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/registrate"
        android:id="@+id/registrate"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="250px"
        android:layout_height="250px"
        android:id="@+id/profile"
        android:layout_below="@+id/registrate"
        android:layout_centerHorizontal="true"
        android:src="@drawable/profile"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_nombre"
        android:layout_below="@+id/profile"
        android:layout_centerHorizontal="true"
        android:hint="@string/nombre"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_direccion"
        android:layout_below="@+id/edit_nombre"
        android:layout_centerHorizontal="true"
        android:hint="@string/direccion"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edit_telefono"
        android:layout_below="@+id/edit_direccion"
        android:layout_centerHorizontal="true"
        android:hint="@string/telefono"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/spinner_sexo"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edit_telefono" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/date_nacimiento"
        android:layout_below="@+id/spinner_sexo"
        android:layout_centerHorizontal="true"
        android:hint="@string/nacimiento"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edit_peso"
        android:layout_below="@+id/date_nacimiento"
        android:layout_centerHorizontal="true"
        android:hint="@string/peso"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edit_altura"
        android:layout_below="@+id/edit_peso"
        android:layout_centerHorizontal="true"
        android:hint="@string/altura"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:id="@+id/button_registrarse"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
