<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:weightSum="1">

    <ImageView
        android:id="@+id/image_medicamento"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/logo"
        android:layout_weight="0.27"
        android:layout_marginLeft="10dp"/>
    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/text_nombre_medicina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_medicina"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:id="@+id/text_dosis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dosis"
                android:layout_weight="0.77" />
            <CheckBox
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Tomada"
                android:id="@+id/checkBox"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_gravity="right" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_horario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/horario"/>

    </LinearLayout>

</LinearLayout>